--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Farah Salahuddin
-logo: Images/anniversary_sunset_2.jpg
+logo: "Images/anniversary_sunset_2.jpg"
 show_downloads: True
 theme: jekyll-theme-minimal
 
